i18n/zh-CN/docusaurus-plugin-content-docs/version-4.x/lakehouse/catalogs/paimon-catalog.mdx
---
{
    "title": "Paimon Catalog",
    "language": "zh-CN",
    "description": "Apache Doris Paimon Catalog 支持通过 Hive Metastore、阿里云 DLF、FileSystem 等多种元数据服务访问 Paimon 表，提供数据查询、时间旅行、增量查询、Branch/Tag 管理等功能，实现高性能的数据湖分析和 ZeroETL 数据集成。"
}
---

import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

Doris 支持通过多种元数据服务访问 Paimon 表元数据，并进行 Paimon 数据查询。

目前只支持 Paimon 表的读操作，未来会支持写入 Paimon 表。

[使用 Docker 快速体验 Apache Doris & Paimon](../best-practices/doris-paimon.md)

## 适用场景

| 场景 | 说明                 |
| ---- | ------------------------------------------------------ |
| 查询加速 | 利用 Doris 分布式计算引擎，直接访问 Paimon 数据进行查询加速。                 |
| 数据集成 | 读取 Paimon 数据并写入到 Doris 内表。或通过 Doris 计算引擎进行 ZeroETL 操作。 |
| 数据写回 | 暂不支持。                                                   |

## 配置 Catalog

### 语法

```sql
CREATE CATALOG [IF NOT EXISTS] catalog_name PROPERTIES (
    'type' = 'paimon',
    'paimon.catalog.type' = '<paimon_catalog_type>',
    'warehouse' = '<paimon_warehouse>'
    {MetaStoreProperties},
    {StorageProperties},
    {PaimonProperties},
    {CommonProperties}
);
```

* `<paimon_catalog_type>`

    Paimon Catalog 的类型，支持以下几种：

    * `filesystem`：默认。直接访问文件系统上存储的元数据。

    * `hms`：使用 Hive Metastore 作为元数据服务。

    * `dlf`：使用阿里云 DLF 作为元数据服务。

    * `jdbc`：使用 JDBC 接口连接关系型数据库作为元数据服务（自 4.1.0 版本支持）。

* `<paimon_warehouse>`

    Paimon 的仓库路径。当 `<paimon_catalog_type>` 为 `filesystem` 时，需指定这个参数。

    `warehouse` 的路径必须指向 `Database` 路径的上一级。如您的表路径是：`s3://bucket/path/to/db1/table1`，那么 `warehouse` 应该是：`s3://bucket/path/to/`。

* `{MetaStoreProperties}`

    MetaStoreProperties 部分用于填写 Metastore 元数据服务连接和认证信息。具体可参阅【支持的元数据服务】部分。

* `{StorageProperties}`

    StorageProperties 部分用于填写存储系统相关的连接和认证信息。具体可参阅【支持的存储系统】部分。

* `{PaimonProperties}`

    PaimonProperties 部分用于填写 Paimon 相关的属性。

    Doris 在访问 Paimon 元数据时，会部分使用 Paimon Java SDK，因此可能有一些自定义参数需要透传给 Paimon Java SDK。可以使用以下前缀：

    ```
    paimon.s3.xxx
    paimon.s3a.xxx
    paimon.fs.xxx
    ```

    这些参数会进行自动转换并透传，下面列举一些示例：

    | 输入参数                                   | 转换后适用于 Paimon Java SDK 的参数       |
    | ------------------------------------------ | ----------------------------------------- |
    | "paimon.s3.list.version" = "1"            | "fs.s3a.list.version" = "1"              |
    | "paimon.s3.paging.maximum" = "100"        | "fs.s3a.paging.maximum" = "100"          |
    | "paimon.fs.s3.read.ahead.buffer.size" = "1" | "fs.s3a.read.ahead.buffer.size" = "1"    |
    | "paimon.s3a.replication.factor" = "3"     | "fs.s3a.replication.factor" = "3"        |

    **Paimon 读参数**

    Doris 支持下表中有明确边界的 Paimon 批读参数。可以通过 Catalog 属性
    `paimon.table-option.<option-key>` 为 Doris 查询设置默认值，也可以通过
    `table@options('<option-key>'='<value>')` 仅覆盖单个表引用。这些参数只影响 Doris 读取，不会修改物理
    Paimon 表的元数据。

    | Paimon 参数 | Paimon 默认值 | Doris 接受的值 | 作用 |
    | --- | --- | --- | --- |
    | `read.batch-size` | `1024` | `1` 到 `65536` 的整数 | Paimon JNI Reader 每批请求的行数。Doris 打开 Reader 时会保留显式配置的值。 |
    | `file-reader-async-threshold` | `10 MB` | `1 MB` 到 `1 GB` 的内存大小 | Paimon JNI Reader 切换为异步文件读取的文件大小阈值。 |
    | `file-index.read.enabled` | `true` | 布尔值 | 是否在读取时启用 Paimon 文件索引裁剪。 |
    | `source.split.target-size` | `128 MB` | 正数内存大小 | Paimon 将数据文件组合成 Doris 扫描 split 时使用的目标大小。 |
    | `source.split.open-file-cost` | `4 MB` | 非负内存大小 | Paimon 组合文件生成 split 时估算的文件打开成本。 |
    | `scan.manifest.parallelism` | 可用处理器数量 | `1` 到 `256` 的整数 | 请求的 Manifest 读取并行度。执行时，Doris 会分别限制每个规划分支，实际值不超过配置值、`256` 以及执行规划的 FE 或 BE 的可用处理器数量三者中的最小值。 |
    | `scan.plan-sort-partition` | `false` | 布尔值 | 是否在 Paimon 扫描规划时对分区排序。 |

    例如，以下 Catalog 配置会覆盖物理 Paimon 表中已有的值，并作为 Doris 查询的默认值：

    ```sql
    CREATE CATALOG paimon_hms PROPERTIES (
        "type" = "paimon",
        "paimon.catalog.type" = "hms",
        "hive.metastore.uris" = "thrift://127.0.0.1:9083",
        "warehouse" = "s3://bucket/paimon-warehouse",
        "paimon.table-option.read.batch-size" = "4096",
        "paimon.table-option.file-reader-async-threshold" = "32 MB",
        "paimon.table-option.source.split.target-size" = "64 MB",
        "paimon.table-option.scan.manifest.parallelism" = "1"
    );
    ```

    查询可以覆盖这些默认值，而不修改 Catalog 或 Paimon 表元数据：

    ```sql
    SELECT *
    FROM paimon_hms.db_name.table_name@options(
        'read.batch-size' = '8192',
        'source.split.target-size' = '32 MB'
    );
    ```

    每个表引用使用独立的参数集合。例如，同一语句中同一张表的两个别名可以使用不同的批大小：

    ```sql
    SELECT small.id
    FROM paimon_hms.db_name.table_name@options('read.batch-size' = '1') small
    JOIN paimon_hms.db_name.table_name@options('read.batch-size' = '8192') large
      ON small.id = large.id;
    ```

    参数优先级从高到低为：

    ```text
    表引用 @options > Doris Catalog 属性 > 物理 Paimon 表参数 > Paimon 默认值
    ```

    Doris 会在应用上述优先级后校验最终值。因此，合法的 Catalog 或表引用参数可以覆盖物理表中的非法值；
    如果最终值仍然非法，Doris 会在受影响的规划或 Reader 阶段开始前拒绝查询。Manifest 限制还会在分区、
    行数/统计信息、fallback 分支和系统表的 Manifest 规划前生效。

    表中的前五个参数不会改变元数据选择，可以复用已缓存的最新分区投影。
    `scan.manifest.parallelism` 和 `scan.plan-sort-partition` 会影响元数据规划，因此 Doris 使用当前表引用的
    最终 Table Handle 进行规划。查询级参数不会调整 Paimon JVM 全局 Executor 的大小。

    Doris 会在 `CREATE CATALOG` 和 `ALTER CATALOG` 时拒绝未知或非法的
    `paimon.table-option.*` 属性。`ALTER CATALOG` 会先校验完整的候选配置，再发布修改，因此失败后旧的
    Catalog 配置仍然生效。旧 Doris 版本持久化的 Catalog 仍可加载，但不受支持或非法的历史 Reader 参数只会被忽略，
    不会被应用；原始值仍会保留，以兼容 image 和 edit log。

    快照和启动位置参数属于表引用上下文选择器，必须使用[通过 `@options` 进行时间旅行](#time-travel-with-options)
    中介绍的语法，不能配置为 Catalog 默认值。Doris 也不支持仅供 Paimon Flink Source Enumerator 使用的
    `scan.max-splits-per-task`，以及 `scan.fallback-branch`、流式 Source、表布局、写入和 Compaction 参数。
    Bucket、Primary Key、Partition、Merge Engine 等物理表行为应在 Paimon 中配置。

    :::info 语句一致性
    在同一条语句内，Doris 会让 Schema 绑定、分区加载、行数/统计信息收集、系统表规划和数据扫描使用同一个
    Paimon 快照与表版本。通过 `@options` 选择快照或 Tag 时，会使用该历史版本对应的 Schema，包括嵌套的
    `STRUCT`、`MAP` 和 `ARRAY` 字段。预处理语句每次执行都会获取新的语句状态，因此两次执行之间的新提交会按照
    新一次执行的选择器和缓存配置决定是否可见。
    :::

    为保障运维安全，Paimon Scanner 的 DEBUG 配置日志只输出批大小和投影字段数量；Doris 不会输出可能包含凭据的
    原始 Scanner 参数 Map。Profile 指标 `PaimonJniAsyncReaderThreadCount` 在所有 Scanner 间按一秒周期采样，
    因此可能最多滞后一秒；采样不会影响查询执行或调度。Reader 和 IOManager 会独立清理，部分关闭失败后可以安全重试。

    **Paimon JNI IOManager**

    > 该功能自 4.0.8 版本起支持。

    对于 Paimon 主键表，JNI merge read 可能需要对多个文件中的数据进行排序和合并。可以启用 Paimon
    IOManager，将中间数据 spill 到 BE 本地磁盘，以降低大数据量 merge read 的内存压力。

    | 参数 | 是否必填 | 默认值 | 说明 |
    | --- | --- | --- | --- |
    | `paimon.jni.enable_jni_io_manager` | 否 | `false` | 是否为 JNI 读取启用 Paimon IOManager。只有设置为 `true` 时，其他 IOManager 参数才会生效。 |
    | `paimon.jni.io_manager.tmp_dir` | 否 | `<storage_root_path>/paimon_jni_scanner_io_tmp` | Paimon IOManager 存放临时 spill 文件的本地目录。多个目录可以使用逗号或冒号分隔。未配置时，Doris 会在 BE 的每个存储路径下创建一个目录。 |
    | `paimon.jni.io_manager.impl_class` | 否 | Paimon 默认实现 | 自定义 `org.apache.paimon.disk.IOManager` 实现的完整类名。该类必须存在于每个 BE 的 Paimon JNI Scanner classpath 中。 |

    以下示例启用 IOManager，并由 Doris 根据 BE 存储路径自动选择临时目录：

    ```sql
    CREATE CATALOG paimon_hms PROPERTIES (
        "type" = "paimon",
        "paimon.catalog.type" = "hms",
        "hive.metastore.uris" = "thrift://127.0.0.1:9083",
        "warehouse" = "s3://bucket/paimon-warehouse",
        "paimon.jni.enable_jni_io_manager" = "true"
    );
    ```

    启用 IOManager 不会强制所有 merge read 都进行 spill。只有 merge reader 数量超过 Paimon 的
    `sort-spill-threshold` 时才会触发 spill。该参数不是 Doris 动态 Reader 参数；如需改变 spill 行为，
    应在物理 Paimon 表中配置。

    如果需要使用专用 spill 磁盘，可以配置每个 BE 上均存在或可以创建的本地路径：

    ```sql
    "paimon.jni.io_manager.tmp_dir" = "/mnt/ssd1/paimon_io:/mnt/ssd2/paimon_io"
    ```

    Doris 会为每个 JNI Scanner 创建一个 IOManager，并在 Scanner 关闭时一同关闭。需要确保配置的目录
    可写，并为并发查询预留足够空间。配置自定义实现类时，该类必须提供以 `String[]` 为参数的 public
    构造方法、以 `String` 为参数的 public 构造方法，或 public 无参构造方法。如果类加载或实例化失败，
    查询会失败。

    这些参数只影响使用 JNI 路径读取 Paimon 数据表的场景，不影响 Native 读取。
    `paimon.table-option.file-reader-async-threshold` 是独立参数，用于控制 Paimon 文件异步读取的阈值，
    不会启用 IOManager，也不会配置 spill 目录。

* `{CommonProperties}`

    CommonProperties 部分用于填写通用属性。请参阅[数据目录概述](../catalog-overview.md)中【通用属性】部分。

## 元数据缓存 {#meta-cache}

为了提升访问外部数据源的性能，Apache Doris 会对 Paimon 的元数据进行缓存。元数据包括表结构（Schema）、表对象、Snapshot 和分区投影等。

:::tip
对于 Doris 4.1.x 之前的版本，元数据缓存主要由 FE 配置项全局控制，详情请参阅[元数据缓存](../meta-cache.md)。
从 Doris 4.1.x 开始，Paimon Catalog 的外表元数据缓存使用统一键 `meta.cache.*` 进行配置。
:::

### 缓存属性配置（4.1.x+） {#meta-cache-unified-model}

各引擎 cache entry 使用统一的配置键格式：`meta.cache.<engine>.<entry>.{enable,ttl-second,capacity,max-weight}`。内存上限适用于已接入估算器的 `table` 和 `snapshot` 模块，详见[外表元数据缓存内存管理](../external-meta-cache-memory-management)。

| 属性 | 示例 | 含义 |
|---|---|---|
| `enable` | `true/false` | 是否启用该缓存模块。 |
| `ttl-second` | `600`、`0`、`-1` | `0` 表示关闭缓存（即刻生效，可用于查看最新数据）；`-1` 表示永不过期；其他正整数表示按访问时间计算 TTL（秒）。 |
| `capacity` | `10000` | 按条目数计算的最大容量。启用 `max-weight` 后不再同时作为条目数上限，但 `0` 仍会关闭缓存。 |
| `max-weight` | `1GB` | 自 Doris 4.1.4 起支持。可选的估算保留内存上限。Paimon 的 `table` 和 `snapshot` 支持；`0` 会关闭对应模块。 |

**生效逻辑说明：** 只有当 `enable=true`、`ttl-second != 0`、`capacity > 0`，并且 `max-weight` 未配置或不为 `0` 时，该模块缓存才会生效。

### 缓存模块 {#meta-cache-unified-modules}

Paimon Catalog 包含以下缓存模块：

| 模块 (`<entry>`) | 属性键前缀 | 缓存内容与影响 |
|---|---|---|
| `schema` | `meta.cache.paimon.schema.` | 缓存表结构。影响：列新增、删除、类型变更在 Doris 中的可见性。若关闭，每次查询都会拉取最新 Schema。 |
| `table` | `meta.cache.paimon.table.` | 缓存 Paimon 表元数据对象。影响：最新 Snapshot、Schema 演进、分支/标签引用等表级元数据在 Doris 中的可见性，同时减少查询规划时的元数据加载开销。 |
| `snapshot` | `meta.cache.paimon.snapshot.` | 缓存 Snapshot 元数据、Schema 代际和分区投影；支持 `max-weight`。 |

### 旧参数映射与转换 {#meta-cache-mapping}

在 4.1.x 之前，Paimon 的 Schema 与表级元数据主要遵循旧的 Catalog 兼容属性或 FE 全局缓存模型，详见[元数据缓存](../meta-cache.md)。升级到 4.1.x 后，建议改写为 `meta.cache.paimon.*`，并单独评估表级缓存是否需要更强的新鲜度。

| 4.1 前属性键/旧模型 | 适用范围 | 4.1.x+ 统一键 | 升级建议与影响 |
|---|---|---|---|
| `schema.cache.ttl-second` | 4.1 前 Paimon Catalog 兼容属性 | `meta.cache.paimon.schema.ttl-second` | 控制 Schema 新鲜度。若希望列变更每次查询立即可见，设置为 `0`。 |
| Paimon 表级旧模型 | 4.1 前 FE 全局缓存策略（见旧版元数据缓存文档中的旧表级元数据模型说明） | `meta.cache.paimon.table.ttl-second` | 控制最新 Snapshot/表级元数据的可见性。若希望每次查询都读取最新表快照，设置为 `0`。 |

4.1.x 的统一模型把缓存拆分为 `enable`、`ttl-second`、`capacity` 三个维度；旧模型主要表达 TTL/全局缓存行为。升级后建议不要只替换键名，还要同时评估是否需要显式配置 `enable/capacity`。

### 最佳实践 {#meta-cache-best-practices}

* **实时查看最新数据**：如果您希望每次查询都能看到 Paimon 表的最新数据变动或 Schema 变更，可以将 `schema` 或 `table` 的 `ttl-second` 设置为 `0`。
  ```sql
  -- 关闭表对象缓存，以感知 Paimon 表的最新快照
  ALTER CATALOG paimon_ctl SET PROPERTIES ("meta.cache.paimon.table.ttl-second" = "0");
  ```
* **性能优化**：自 Doris 4.1.4 起，Catalog 属性修改成功后会重置 Catalog 执行上下文，并清理该 Catalog 路由到的所有元数据缓存引擎中已初始化的条目；下一次访问使用新的上下文和配置重建，正在执行的查询不受影响。启用 Doris 内存治理后，默认关闭 Paimon SDK 自带的 `CachingCatalog`；显式配置 `paimon.cache-enabled` 时以用户配置为准。

### 可观测性 {#meta-cache-unified-observability}

可以通过 `information_schema.catalog_meta_cache_statistics` 系统表观测缓存指标：

```sql
SELECT catalog_name, engine_name, entry_name,
       effective_enabled, ttl_second, capacity,
       estimated_size, hit_rate, load_failure_count, last_error
FROM information_schema.catalog_meta_cache_statistics
WHERE catalog_name = 'paimon_ctl' AND engine_name = 'paimon'
ORDER BY entry_name;
```

该系统表文档见：[catalog_meta_cache_statistics](../../admin-manual/system-tables/information_schema/catalog_meta_cache_statistics.md)。

### 支持的 Paimon 版本

当前依赖的 Paimon 版本为 1.4.2（4.1.4 之前为 1.3.1）。

### 支持的 Paimon 格式

* 支持读取 Paimon Deletion Vector

### 支持的元数据服务

* [Hive Metastore](../metastores/hive-metastore.md)

* [Aliyun DLF ](../metastores/aliyun-dlf.md)

* [Paimon JDBC Catalog](../metastores/paimon-jdbc.md)（自 4.1.0 版本支持）

* [FileSystem](../metastores/filesystem.md)

> 注意：不同 Doris 版本所支持的服务类型和参数略有区别，请参考【基础示例】章节。

### 支持的存储系统

* [HDFS](../storages/hdfs.md)

* [AWS S3](../storages/s3.md)

* [Google Cloud Storage](../storages/gcs.md)

* [Apache Ozone](../storages/ozone.md)（自 4.0.4 起支持）

* [阿里云 OSS](../storages/aliyun-oss.md)

* [腾讯云 COS](../storages/tencent-cos.md)

* [华为云 OBS](../storages/huawei-obs.md)

* [MINIO](../storages/minio.md)

> 注意：不同 Doris 版本所支持的服务类型和参数略有区别，请参考【基础示例】章节。

### 支持的数据格式

* [Parquet](../file-formats/parquet.md)

* [ORC](../file-formats/orc.md)

## 列类型映射

| Paimon Type                        | Doris Type    | Comment                                |
| ---------------------------------- | ------------- | -------------------------------------- |
| boolean                              | boolean                   |                                                                                                                                                                               |
| tinyint                              | tinyint                   |                                                                                                                                                                               |
| smallint                             | smallint                  |                                                                                                                                                                               |
| integer                              | int                       |                                                                                                                                                                               |
| bigint                               | bigint                    |                                                                                                                                                                               |
| float                                | float                     |                                                                                                                                                                               |
| double                               | double                    |                                                                                                                                                                               |
| decimal(P, S)                        | decimal(P, S)             |                                                                                                                                                                               |
| varchar                              | string                    |                                                                                                                                                                               |
| char                                 | string                    |                                                                                                                                                                               |
| binary, varbinary                    | string/varbinary          | 由 properties 中 `enable.mapping.varbinary` (4.0.2 后开始支持) 属性控制。默认为 `false`，则映射到 `string`；为 `true` 时，则映射到 `varbinary` 类型。                     |
| date                                 | date                      |                                                                                                                                                                               |
| timestamp\_without\_time\_zone     | datetime(N)               | 会根据精度进行对应映射。如果精度大于 6，则最大映射到 6。（可能导致精度丢失）                                                                                                |
| timestamp\_with\_local\_time\_zone | datetime(N)/timestamptz(N) | 会根据精度进行对应映射。如果精度大于 6，则最大映射到 6。（可能导致精度丢失）。由 properties 中 `enable.mapping.timestamp_tz` (4.0.3 后开始支持) 属性控制，默认为 `false`，则映射到 `datetime`；为 `true` 时，则映射到 `timestamptz` 类型 |
| array                                | array                     |                                                                                                                                                                               |
| map                                  | map                       |                                                                                                                                                                               |
| row                                  | struct                    |                                                                                                                                                                               |
| other                                | UNSUPPORTED               |                                                                                                                                                                               |

在两个 Paimon JNI Scanner 路径上，Doris 都会保留带引号的顶层列名和嵌套 `STRUCT` 字段名的原始大小写与字符。
包含逗号（`region,code`）、井号（`nested#value`）、冒号（`colon:name`）、空格或 Unicode 字符的名称，除普通
SQL 标识符引用外无需额外转义。读取时列按不区分大小写的方式匹配，因此含大写字母或大小写混合的列名（如 `UserId`）可以正常查询。

:::info 版本说明

4.0.8 之前的版本在读取时按精确匹配定位列，含大小写混合列名的 Paimon / Iceberg 表可能读到错误的列或查询失败。该问题已在 4.0.8 中修复。

:::

> 注：
>
> Doris 当前不支持带时区的 `Timestamp` 类型。所有 `timestamp_without_time_zone` 和 `timestamp_with_local_time_zone` 会统一映射到 `datetime(N)` 类型上。但在读取时，Doris 会根据实际源类型正确处理时区。如通过 `SET time_zone=<tz>` 指定时区后，会影响 `timestamp_with_local_time_zone` 列的返回结果。
>
> 可以在 `DESCRIBE table_name` 语句中的 Extra 列查看源类型是否带时区信息。如显示 `WITH_TIMEZONE`，则表示源类型是带时区的类型（该功能自 3.0.8 版本支持）。
>
> 4.0.3 后开始支持，可以映射 `timestamp_with_local_time_zone` 到 Doris 的 `timestamptz` 类型。

## 基础示例

### Hive Metastore

<details>
    <summary>3.1+ 版本</summary>

    <Tabs>
        <TabItem value='HDFS' label='HDFS' default>
            ```sql
            CREATE CATALOG test_paimon_on_hms_hdfs_catalog PROPERTIES (
                'type' = 'paimon',
                'paimon.catalog.type' = 'hms',
                'warehouse' = 'hdfs://127.0.0.1:8320/user/hive/warehouse',
                'hive.metastore.uris' = 'thrift://127.0.0.1:9383',
                'fs.defaultFS' = 'hdfs://127.0.0.1:8320',
                'hadoop.username' = 'doris'
            );
            ```
        </TabItem>
        <TabItem value='S3' label='S3'>
            ```sql
            CREATE CATALOG test_paimon_on_hms_aws_catalog PROPERTIES (
                'type' = 'paimon',
                'paimon.catalog.type' = 'hms',
                'hive.metastore.uris' = 'thrift://127.0.0.1:9383',
                'warehouse' = 's3://bucket/paimon_warehouse',
                's3.region' = 'ap-east-1',
                's3.endpoint' = 'https://s3.ap-east-1.amazonaws.com',
                's3.access_key' = '<ak>',
                's3.secret_key' = '<sk>'
            );
            ```

            使用 IAM Assumed Role 的方式获取 S3 访问凭证 (3.1.2+)

            ```sql
            CREATE CATALOG paimon_hms_on_s3_iamrole PROPERTIES (
                'type' = 'paimon',
                'paimon.catalog.type' = 'hms',
                'warehouse' = 's3://bucket/warehouse',
                'hive.metastore.uris' = 'thrift://127.0.0.1:9383',
                's3.region' = 'us-east-1',
                's3.role_arn' = 'arn:aws:iam::543815668950:role/role'
            );
            ```
        </TabItem>
        <TabItem value='OSS' label='OSS'>
            ```sql
            CREATE CATALOG test_paimon_on_hms_ali_catalog PROPERTIES (
                'type' = 'paimon',
                'paimon.catalog.type' = 'hms',
                'hive.metastore.uris' = 'thrift://127.0.0.1:9383',
                'warehouse' = 'oss://bucket/regression/paimon_warehouse',
                'oss.region' = 'cn-beijing',
                'oss.endpoint' = 'oss-cn-beijing.aliyuncs.com',
                'oss.access_key' = '<ak>',
                'oss.secret_key' = '<sk>'
            );
            ```
        </TabItem>
        <TabItem value='COS' label='COS'>
            ```sql
            CREATE CATALOG test_paimon_on_hms_tx_catalog PROPERTIES (
                'type' = 'paimon',
                'paimon.catalog.type' = 'hms',
                'warehouse' = 'cosn://bucket/paimon_warehouse',
                'hive.metastore.uris' = 'thrift://127.0.0.1:9383',
                'cos.region' = 'ap-beijing',
                'cos.endpoint' = 'cos.ap-beijing.myqcloud.com',
                'cos.access_key' = '<ak>',
                'cos.secret_key' = '<sk>'
            );
            ```
        </TabItem>
        <TabItem value='OBS' label='OBS'>
            ```sql
            CREATE CATALOG test_paimon_on_hms_hw_catalog PROPERTIES (
                'type' = 'paimon',
                'paimon.catalog.type' = 'hms',
                'warehouse' = 'obs://bucket/regression/paimon_warehouse',
                'hive.metastore.uris' = 'thrift://127.0.0.1:9383',
                'obs.region' = 'cn-north-4',
                'obs.endpoint' = 'obs.cn-north-4.myhuaweicloud.com',
                'obs.access_key' = '<ak>',
                'obs.secret_key' = '<sk>'
            );
            ```
        </TabItem>
        <TabItem value='GCS' label='GCS'>
            ```sql
            CREATE CATALOG `paimon_on_gcs` PROPERTIES (
                'type' = 'paimon',
                'paimon.catalog.type' = 'hms',
                'warehouse' = 'gs://bucket/paimon_warehouse',
                'hive.metastore.uris' = 'thrift://127.0.0.1:9383',
                'fs.gcs.support' = 'true',
                'gs.secret_key' = '<sk>',
                'gs.access_key' = '<ak>'
            );
            ```
        </TabItem>
        <TabItem value='Ozone' label='Ozone'>
            自 4.0.4 起支持
            ```sql
            CREATE CATALOG paimon_hms_on_ozone_catalog PROPERTIES (
                'type' = 'paimon',
                'paimon.catalog.type' = 'hms',
                'warehouse' = 's3a://test-bucket/paimon-warehouse',
                'hive.metastore.uris' = 'thrift://127.0.0.1:9383',
                'fs.ozone.support' = 'true',
                'ozone.endpoint' = 'http://ozone-s3g:9878',
                'ozone.access_key' = '<ak>',
                'ozone.secret_key' = '<sk>',
                'ozone.region' = 'us-east-1',
                'ozone.use_path_style' = 'true'
            );
            ```
        </TabItem>
        <TabItem value='MinIO' label='MinIO'>
            ```sql
            CREATE CATALOG paimon_hms_on_minio_catalog PROPERTIES (
                'type' = 'paimon',
                'paimon.catalog.type' = 'hms',
                'warehouse' = 's3://test-bucket/paimon-warehouse',
                'hive.metastore.uris' = 'thrift://127.0.0.1:9383',
                'fs.minio.support' = 'true',
                'minio.endpoint' = 'http://127.0.0.1:19000',
                'minio.access_key' = 'minioadmin',
                'minio.secret_key' = 'minioadmin',
                'minio.use_path_style' = 'true'
            );
            ```
        </TabItem>
    </Tabs>
</details>

<details >
    <summary>2.1 & 3.0 版本</summary>
    <Tabs>
        <TabItem value='HDFS' label='HDFS' default>
            访问未开启 Kerberos 认证的 HMS
            ```sql
            CREATE CATALOG paimon_hms_on_hdfs_catalog PROPERTIES (
                'type' = 'paimon',
                'paimon.catalog.type' = 'hms',
                'hive.metastore.uris' = 'thrift://127.0.0.1:9383',
                'warehouse' = 'hdfs://127.0.0.1:8320/user/paimon/warehouse/paimon-hms-hdfs-warehouse',
                'hadoop.username' = 'doris',
                'fs.defaultFS' = 'hdfs://127.0.0.1:8320'
            );
            ```
            访问开启 Kerberos 认证的 HMS
            ```sql
            CREATE CATALOG paimon_hms_on_hdfs_kerberos_hdfs_catalog PROPERTIES (
                'type' = 'paimon',
                'paimon.catalog.type' = 'hms',
                'warehouse' = 'hdfs://127.0.0.1:8520/paimon-hms-hdfs-warehouse',
                'hive.metastore.uris' = 'thrift://127.0.0.1:9583',
                'hive.metastore.kerberos.principal' = 'hive/hadoop-master@LABS.TERADATA.COM',
                'hive.metastore.sasl.enabled' = 'true',
                'fs.defaultFS' = 'hdfs://127.0.0.1:8520',
                'hadoop.security.auth_to_local' = 'RULE:[2:\$1@\$0](.*@LABS.TERADATA.COM)s/@.*//
                RULE:[2:\$1@\$0](.*@OTHERLABS.TERADATA.COM)s/@.*//
                RULE:[2:\$1@\$0](.*@OTHERREALM.COM)s/@.*//
                DEFAULT',
                'hadoop.security.authentication' = 'kerberos',
                'hadoop.kerberos.principal'='hive/presto-master.docker.cluster@LABS.TERADATA.COM',
                'hadoop.kerberos.keytab' = '/keytabs/hive-presto-master.keytab'
            );
            ```
        </TabItem>
        <TabItem value='S3' label='S3'>
            ```sql
            CREATE CATALOG test_paimon_on_hms_aws_catalog PROPERTIES (
                'type' = 'paimon',
                'paimon.catalog.type' = 'hms',
                'warehouse' = 's3://bucket-hk/paimon_warehouse',
                'hive.metastore.uris' = 'thrift://127.0.0.1:9383',
                's3.region' = 'ap-east-1',
                'paimon.s3.region' = 'ap-east-1',
                's3.endpoint' = 'https://s3.ap-east-1.amazonaws.com',
                'paimon.s3.endpoint' = 'ap-east-1',
                's3.access_key' = '<ak>',
                'paimon.s3.access-key' = '<ak>',
                's3.secret_key' = '<sk>',
                'paimon.s3.secret-key' = '<sk>'    
            );
            ```
        </TabItem>
        <TabItem value='OSS' label='OSS'>
            ```sql
            CREATE CATALOG test_paimon_on_hms_ali_catalog PROPERTIES (
                'type' = 'paimon',
                'paimon.catalog.type' = 'hms',
                'warehouse' = 'oss://bucket/regression/paimon_warehouse',
                'hive.metastore.uris' = 'thrift://127.0.0.1:9383',
                'oss.region' = 'cn-beijing',
                'oss.endpoint' = 'oss-cn-beijing.aliyuncs.com',
                'oss.access_key' = '<ak>',
                'oss.secret_key' = '<sk>'
            );
            ```
        </TabItem>
        <TabItem value='COS' label='COS'>
            ```sql
            CREATE CATALOG test_paimon_on_hms_tx_catalog PROPERTIES (
                'type' = 'paimon',
                'paimon.catalog.type' = 'hms',
                'warehouse' = 'cosn://bucket/paimon_warehouse',
                'hive.metastore.uris' = 'thrift://127.0.0.1:9383',
                'cos.region' = 'ap-beijing',
                'cos.endpoint' = 'cos.ap-beijing.myqcloud.com',
                'cos.access_key' = '<ak>',
                'cos.secret_key' = '<sk>'
            );
            ```
        </TabItem>
        <TabItem value='OBS' label='OBS'>
            ```sql
            CREATE CATALOG test_paimon_on_hms_hw_catalog PROPERTIES (
                'type' = 'paimon',
                'paimon.catalog.type' = 'hms',
                'warehouse' = 'obs://bucket/regression/paimon_warehouse',
                'hive.metastore.uris' = 'thrift://127.0.0.1:9383',
                'obs.region' = 'cn-north-4',
                'obs.endpoint' = 'obs.cn-north-4.myhuaweicloud.com',
                'obs.access_key' = '<ak>',
                'obs.secret_key' = '<sk>'
            );
            ```
        </TabItem>
        <TabItem value='MinIO' label='MinIO'>
            ```sql
            CREATE CATALOG test_paimon_on_hms_minio_catalog PROPERTIES (
                'type' = 'paimon',
                'paimon.catalog.type' = 'hms',
                'warehouse' = 's3://bucket/paimon-warehouse',
                'hive.metastore.uris' = 'thrift://127.0.0.1:9383',
                's3.endpoint' = 'http://127.0.0.1:19000',
                'paimon.s3.endpoint' = 'http://127.0.0.1:19000',
                's3.access_key' = '<ak>',
                'paimon.s3.access-key' = '<ak>',
                's3.secret_key' = '<sk>',
                'paimon.s3.secret-key' = '<sk>',    
                's3.path.style.access' = 'true'
            );
            ```
        </TabItem>
    </Tabs>
</details>

### Aliyun DLF Metastore

<details>
    <summary>3.1+ 版本</summary>

    <Tabs>
        <TabItem value='DLF 1.0' label='DLF 1.0' default>
            ```sql
            CREATE CATALOG paimon_dlf_catalog PROPERTIES (
                'type' = 'paimon',
                'paimon.catalog.type' = 'dlf',
                'warehouse' = 'oss://bucket/p2_regression_case',
                'dlf.uid' = '772905',
                'dlf.catalog_id' = 'p2_regression_case',
                'dlf.region' = 'cn-beijing',
                'dlf.endpoint' = 'dlf.cn-beijing.aliyuncs.com',
                'dlf.access_key' = '<ak>',
                'dlf.secret_key' = '<sk>'
            );
            ```
        </TabItem>
        <TabItem value='DLF(2.5+)' label='DLF(2.5+)'>
            ```sql
            CREATE CATALOG paimon_dlf_test PROPERTIES (
                'type' = 'paimon',
                'paimon.catalog.type' = 'rest',
                'uri' = 'http://cn-beijing-vpc.dlf.aliyuncs.com',
                'warehouse' = 'new_dfl_paimon_catalog',
                'paimon.rest.token.provider' = 'dlf',
                'paimon.rest.dlf.access-key-id' = '<ak>',
                'paimon.rest.dlf.access-key-secret' = '<sk>'
            );
            ```
        </TabItem>
    </Tabs>
</details>

<details >
    <summary>2.1 & 3.0 版本</summary>

    <Tabs>
        <TabItem value='DLF 1.0' label='DLF 1.0' default>
            ```sql
            CREATE CATALOG paimon_dlf_catalog PROPERTIES (
                'type' = 'paimon',
                'paimon.catalog.type' = 'dlf',
                'warehouse' = 'oss://bucket/paimon-dlf-oss-warehouse',
                'dlf.uid' = '7716890',
                'dlf.catalog.id' = 'p2_regression_case',
                'dlf.region' = 'cn-beijing',
                'dlf.endpoint' = 'dlf.cn-beijing.aliyuncs.com',
                'dlf.access_key' = '<ak>',
                'dlf.secret_key' = '<sk>'
            );
            ```
        </TabItem>

    </Tabs>
</details>

### FileSystem Metastore

<details>
    <summary>3.1+ 版本</summary>

    <Tabs>
        <TabItem value='HDFS' label='HDFS' default>
            访问未开启 Kerberos 认证的 HMS 和 HDFS 服务
            ```sql
            CREATE CATALOG ctl_test_paimon_catalog PROPERTIES (
                'type' = 'paimon',
                'paimon.catalog.type' = 'filesystem',
                'warehouse' = 'hdfs://127.0.0.1:8020/user/doris/paimon1',
                'fs.defaultFS' = 'hdfs://127.0.0.1:8020'
            );
            ```
        </TabItem>
        <TabItem value='S3' label='S3'>
            ```sql
            CREATE CATALOG test_paimon_on_fs_aws_catalog PROPERTIES (
                'type' = 'paimon',
                'paimon.catalog.type' = 'filesystem',
                'warehouse' = 's3://bucket/paimon_warehouse',
                's3.region' = 'ap-east-1',
                's3.endpoint' = 'https://s3.ap-east-1.amazonaws.com',
                's3.access_key' = '<ak>',
                's3.secret_key' = '<sk>'
            );
            ```

            使用 IAM Assumed Role 的方式获取 S3 访问凭证 (3.1.2+)

            ```sql
            CREATE CATALOG paimon_fs_on_s3_iamrole PROPERTIES (
                'type' = 'paimon',
                'paimon.catalog.type' = 'filesystem',
                'warehouse' = 's3://bucket/warehouse',
                's3.region' = 'us-east-1',
                's3.role_arn' = 'arn:aws:iam::543815668950:role/role'
            );
            ```    
        </TabItem>
        <TabItem value='OSS' label='OSS'>
            使用 OSS
            ```sql
            CREATE CATALOG paimon_base_filesystem_paimon_oss PROPERTIES (
                'type' = 'paimon',
                'paimon.catalog.type' = 'filesystem',
                'warehouse' = 'oss://bucket/regression/paimon1',
                'oss.region'='cn-beijing',
                'oss.endpoint'='oss-cn-beijing.aliyuncs.com',
                'oss.access_key'='<ak>',
                'oss.secret_key'='<sk>'
            );
            ```

            使用 OSS-HDFS

            ```sql
            CREATE CATALOG paimon_base_filesystem_paimon_oss_hdfs PROPERTIES (
                'type' = 'paimon',
                'paimon.catalog.type' = 'filesystem',
                'warehouse' = 'oss://bucket/regression/paimon1',
                'fs.oss-hdfs.support' = 'true',
                'oss.hdfs.access_key' = '<ak>',
                'oss.hdfs.secret_key' = '<sk>',
                'oss.hdfs.endpoint' = 'cn-beijing.oss-dls.aliyuncs.com',
                'oss.hdfs.region' = 'cn-beijing'
            );
            ```
        </TabItem>
        <TabItem value='COS' label='COS'>
            ```sql
            CREATE CATALOG paimon_base_filesystem_paimon_cosn PROPERTIES (
                'type' = 'paimon',
                'paimon.catalog.type' = 'filesystem',
                'warehouse' = 'cosn://bucket/regression/paimon1',
                'cos.region' = 'ap-beijing',
                'cos.endpoint' = 'cos.ap-beijing.myqcloud.com',
                'cos.access_key' = '<ak>',
                'cos.secret_key' = '<sk>'
            );
            ```
        </TabItem>
        <TabItem value='OBS' label='OBS'>
            ```sql
            CREATE CATALOG paimon_base_filesystem_paimon_obs PROPERTIES (
                'type' = 'paimon',
                'paimon.catalog.type' = 'filesystem',
                'warehouse' = 'obs://bucket/regression/paimon1',
                'obs.region' = 'cn-north-4',
                'obs.endpoint' = 'obs.cn-north-4.myhuaweicloud.com',
                'obs.access_key' = '<ak>',
                'obs.secret_key' = '<sk>'
            );
            ```
        </TabItem>
        <TabItem value='GCS' label='GCS'>
            ```sql
            CREATE CATALOG paimon_on_gcs_s3_fs PROPERTIES (
                'type' = 'paimon',
                'paimon.catalog.type' = 'filesystem',
                'warehouse' = 's3://bucket/paimon_warehouse',
                'fs.gcs.support' = 'true',
                'gs.secret_key' = '<sk>',
                'gs.access_key' = '<ak>'
            );
            ```
        </TabItem>
        <TabItem value='MinIO' label='MinIO'>
            ```sql
            CREATE CATALOG test_paimon_minio_minio PROPERTIES (
                'type' = 'paimon',
                'warehouse' = 's3://warehouse/wh',
                'fs.minio.support' = 'true',
                'minio.endpoint' = 'http://127.0.0.1:19001',
                'minio.access_key' = 'admin',
                'minio.secret_key' = 'password',
                'minio.use_path_style' = 'true'
            );
            ```
        </TabItem>
    </Tabs>
</details>

<details>
    <summary>2.1 & 3.0</summary>
    <Tabs>
        <TabItem value='HDFS' label='HDFS' default>
            访问未开启 Kerberos 认证的 HMS 和 HDFS 服务
            ```sql
            CREATE CATALOG ctl_test_paimon_catalog PROPERTIES (
                'type' = 'paimon',
                'paimon.catalog.type' = 'filesystem',
                'warehouse' = 'hdfs://127.0.0.1:8020/user/doris/paimon1',
                'fs.defaultFS' = 'hdfs://127.0.0.1:8020'
            );
            ```
        </TabItem>
        <TabItem value='S3' label='S3'>
            ```sql
            CREATE CATALOG test_paimon_on_fs_aws_catalog PROPERTIES (
                'type' = 'paimon',
                'paimon.catalog.type' = 'filesystem',
                'warehouse' = 's3://bucket/paimon_warehouse',
                's3.region' = 'ap-east-1',
                's3.endpoint' = 'https://s3.ap-east-1.amazonaws.com',
                's3.access_key' = '<ak>',
                's3.secret_key' = '<sk>'
            );
            ```
        </TabItem>
        <TabItem value='OSS' label='OSS'>
            使用 OSS

            ```sql
            CREATE CATALOG paimon_base_filesystem_paimon_oss PROPERTIES (
                'type' = 'paimon',
                'paimon.catalog.type' = 'filesystem',
                'warehouse' = 'oss://bucket/regression/paimon1',
                'oss.region'='cn-beijing',
                'oss.endpoint'='oss-cn-beijing.aliyuncs.com',
                'oss.access_key'='<ak>',
                'oss.secret_key'='<sk>'
            );
            ```

            使用 OSS-HDFS

            ```sql
            CREATE CATALOG paimon_base_filesystem_paimon_oss_hdfs PROPERTIES (
                'type' = 'paimon',
                'paimon.catalog.type' = 'filesystem',
                'warehouse' = 'oss://bucket/regression/paimon1',
                'oss.hdfs.enabled' = 'true',
                'oss.access_key' = 'your-access-key',
                'oss.secret_key' = 'your-secret-key',
                'oss.endpoint' = 'cn-hangzhou.oss-dls.aliyuncs.com',
                'oss.region' = 'cn-hangzhou'
            );
            ```
        </TabItem>
        <TabItem value='COS' label='COS'>
            ```sql
            CREATE CATALOG paimon_base_filesystem_paimon_cosn PROPERTIES (
                'type' = 'paimon',
                'paimon.catalog.type' = 'filesystem',
                'warehouse' = 'cosn://bucket/regression/paimon1',
                'cos.region' = 'ap-beijing',
                'cos.endpoint' = 'cos.ap-beijing.myqcloud.com',
                'cos.access_key' = '<ak>',
                'cos.secret_key' = '<sk>'
            );
            ```
        </TabItem>
        <TabItem value='OBS' label='OBS'>
            ```sql
            CREATE CATALOG paimon_base_filesystem_paimon_obs PROPERTIES (
                'type' = 'paimon',
                'paimon.catalog.type' = 'filesystem',
                'warehouse' = 'obs://bucket/regression/paimon1',
                'obs.region' = 'cn-north-4',
                'obs.endpoint' = 'obs.cn-north-4.myhuaweicloud.com',
                'obs.access_key' = '<ak>',
                'obs.secret_key' = '<sk>'
            );
            ```
        </TabItem>
        <TabItem value='MinIO' label='MinIO'>
            ```sql
            CREATE CATALOG paimon_base_filesystem_paimon_minio PROPERTIES (
                'type' = 'paimon',
                'warehouse' = 's3://warehouse/wh',
                'paimon.catalog.type' = 'filesystem',
                's3.endpoint' = 'http://127.0.0.1:19001',
                's3.access_key' = '<ak>',
                's3.secret_key' = '<sk>',
                's3.path.style.access' = 'true'
            );
            ```
        </TabItem>
    </Tabs>
</details>

### Paimon JDBC Catalog

:::tip 提示
该功能为试验功能，自 4.1.0 版本支持。
:::

<details>
    <summary>4.1+ 版本</summary>
    <Tabs>
        <TabItem value='PostgreSQL' label='PostgreSQL' default>
            使用 PostgreSQL 作为元数据存储，配合 S3 存储
            ```sql
            CREATE CATALOG paimon_jdbc_postgresql PROPERTIES (
                'type' = 'paimon',
                'paimon.catalog.type' = 'jdbc',
                'paimon.jdbc.uri' = 'jdbc:postgresql://127.0.0.1:5432/paimon_db',
                'paimon.jdbc.user' = 'paimon_user',
                'paimon.jdbc.password' = 'password',
                'paimon.jdbc.driver_class' = 'org.postgresql.Driver',
                'paimon.jdbc.driver_url' = '<jdbc_driver_jar>',
                'warehouse' = 's3://bucket/warehouse',
                's3.access_key' = '<ak>',
                's3.secret_key' = '<sk>',
                's3.endpoint' = 'https://s3.us-east-1.amazonaws.com',
                's3.region' = 'us-east-1'
            );
            ```
        </TabItem>
        <TabItem value='MySQL' label='MySQL'>
            使用 MySQL 作为元数据存储，配合 S3 存储
            ```sql
            CREATE CATALOG paimon_jdbc_mysql PROPERTIES (
                'type' = 'paimon',
                'paimon.catalog.type' = 'jdbc',
                'paimon.jdbc.uri' = 'jdbc:mysql://127.0.0.1:3306/paimon_db',
                'paimon.jdbc.user' = 'paimon_user',
                'paimon.jdbc.password' = 'password',
                'paimon.jdbc.driver_class' = 'com.mysql.cj.jdbc.Driver',
                'paimon.jdbc.driver_url' = '<jdbc_driver_jar>',
                'warehouse' = 's3://bucket/warehouse',
                's3.access_key' = '<ak>',
                's3.secret_key' = '<sk>',
                's3.endpoint' = 'https://s3.us-east-1.amazonaws.com',
                's3.region' = 'us-east-1'
            );
            ```
        </TabItem>
    </Tabs>
</details>

## 查询操作

### 基础查询

配置好 Catalog 后，可以通过以下方式查询 Catalog 中的表数据：

```sql
-- 1. switch to catalog, use database and query
SWITCH paimon_ctl;
USE paimon_db;
SELECT * FROM paimon_tbl LIMIT 10;

-- 2. use paimon database directly
USE paimon_ctl.paimon_db;
SELECT * FROM paimon_tbl LIMIT 10;

-- 3. use full qualified name to query
SELECT * FROM paimon_ctl.paimon_db.paimon_tbl LIMIT 10;
```

### 增量查询

> 该功能自 3.1.0 版本支持

支持类似 Flink 针对 Paimon 的 [Batch Incremental](https://paimon.apache.org/docs/master/flink/sql-query/#batch-incremental) 查询。

支持查询指定的快照或时间戳区间内的增量数据。区间为左闭右开区间。

```sql
-- between snapshots [0, 5)
SELECT * FROM paimon_table@incr('startSnapshotId'='0', 'endSnapshotId'='5');

-- between snapshots [0, 5) with specified scan mode
SELECT * FROM paimon_table@incr('startSnapshotId'='0', 'endSnapshotId'='5', 'incrementalBetweenScanMode'='diff');

-- read from start timestamp
SELECT * FROM paimon_table@incr('startTimestamp'='1750844949000');

-- read between timestamp
SELECT * FROM paimon_table@incr('startTimestamp'='1750844949000', 'endTimestamp'='1750944949000');
```

参数说明：

| 参数                           | 说明                                                                                         | 示例                                     |
| ------------------------------ | -------------------------------------------------------------------------------------------- | ---------------------------------------- |
| `startSnapshotId`            | 起始快照 ID，必须大于 0。必须和 `endSnapshotId` 配对使用。                                   | `'startSnapshotId'='3'`                  |
| `endSnapshotId`              | 结束快照 ID，必须大于 `startSnapshotId`。必须和 `startSnapshotId` 配对使用。                 | `'endSnapshotId'='10'`                   |
| `incrementalBetweenScanMode` | 指定增量读取的模式，默认 `auto`，支持 `delta`、`changelog` 和 `diff`                         | `'incrementalBetweenScanMode'='delta'`   |
| `startTimestamp`             | 起始快照时间，必须大于等于 0。单位是毫秒。                                                   | `'startTimestamp'='1750844949000'`       |
| `endTimestamp`               | 结束快照时间，必须大于 `startTimestamp`。可选，如不指定，则表示从 `startTimestamp` 开始读取到最新的快照。单位是毫秒。 | `'endTimestamp'='1750944949000'`         |

> 注：
>
> `startSnapshotId` 和 `endSnapshotId` 会组成 Paimon 参数 `'incremental-between'='3,10'`
>
> `startTimestamp` 和 `endTimestamp` 会组成 Paimon 参数 `'incremental-between-timestamp'='1750844949000,1750944949000'`
>
> `incrementalBetweenScanMode` 对应 Paimon 参数 `incremental-between-scan-mode`。

可参阅 [Paimon 文档](https://paimon.apache.org/docs/master/maintenance/configurations/) 进一步了解这些参数。

### 时间旅行

> 该功能自 3.1.0 版本支持

支持读取 Paimon 表指定的 Snapshot。

默认情况下，读取请求只会读取最新版本的快照。

可以通过 `$snapshots` 表函数查询查询指定 Paimon 表的 Snapshot：

```sql
Doris > SELECT snapshot_id,commit_time FROM paimon_tbl$snapshots;
+-------------+-------------------------+
| snapshot_id | commit_time             |
+-------------+-------------------------+
|           1 | 2025-08-17 06:05:52.740 |
|           2 | 2025-08-17 06:05:52.979 |
|           3 | 2025-08-17 06:05:53.240 |
|           4 | 2025-08-17 06:05:53.561 |
+-------------+-------------------------+
```

可以使用 `FOR TIME AS OF` 和 `FOR VERSION AS OF` 语句，根据快照 ID 或者快照产生的时间读取历史版本的数据。示例如下：

```sql
-- Notice:
-- Before 3.1.1, only support format like YYYY-MM-DD HH:MM:SS.SSS
-- After 3.1.2, support YYYY-MM-DD HH:MM:SS and YYYY-MM-DD
SELECT * FROM paimon_tbl FOR TIME AS OF "2025-08-17 06:05:52.740";
SELECT * FROM paimon_tbl FOR TIME AS OF "2025-08-17 06:05:52";
SELECT * FROM paimon_tbl FOR TIME AS OF "2025-08-17";

-- Notice: The timestamp must be precise down to the millisecond.
SELECT * FROM paimon_tbl FOR TIME AS OF 1755381952740;
-- Use snapshot id
SELECT * FROM paimon_tbl FOR VERSION AS OF 1;
```

#### 通过 `@options` 进行时间旅行 {#time-travel-with-options}

如需使用 Paimon 专用选择器，可以在查询的表引用上使用 `@options`。Doris 支持 `scan.snapshot-id`、
`scan.tag-name`、`scan.version`、`scan.timestamp`、`scan.timestamp-millis`、`scan.watermark`、
`scan.file-creation-time-millis`、`scan.creation-time-millis` 和 `scan.mode`。选择快照或 Tag 时也会选择对应的
历史 Schema；Doris 不会把最新 Schema 错误地绑定到历史数据。

```sql
-- 使用快照 1 中保存的 Schema 读取快照 1。
SELECT id, old_name
FROM paimon_tbl@options('scan.snapshot-id' = '1');

-- 即使普通快照已经过期，保留的 Tag 仍然可以读取。
SELECT id, old_name
FROM paimon_tbl@options('scan.tag-name' = 'tag1');
```

一个表引用只能指定一个启动位置参数。只有 Paimon 定义为兼容的组合才能同时使用 `scan.mode` 和位置参数；例如，
`scan.mode='from-creation-timestamp'` 必须同时指定 `scan.creation-time-millis`。不存在或已过期的快照、Branch
或 Tag 会明确报错，不会静默回退到最新表。`@options` 可以用于查询的表引用，也可以保存在 View 定义中，但不能
应用于 CTE 引用或 `SHOW` 等非查询命令。

### Branch 和 Tag

> 该功能自 3.1.0 版本支持

支持读取指定 Paimon 表的分支（Branch）和标签（Tag）。

可以使用 `$branches` 和 `$tags` 系统表查看 Paimon 表的 Branch 和 Tag：

```sql
Doris > SELECT * FROM paimon_tbl$branches;
+-------------+-------------------------+
| branch_name | create_time             |
+-------------+-------------------------+
| b_1         | 2025-08-17 06:34:37.294 |
| b_2         | 2025-08-17 06:34:37.297 |
+-------------+-------------------------+

Doris > SELECT * FROM paimon_tbl$tags;
+----------+-------------+-----------+-------------------------+--------------+-------------+---------------+
| tag_name | snapshot_id | schema_id | commit_time             | record_count | create_time | time_retained |
+----------+-------------+-----------+-------------------------+--------------+-------------+---------------+
| t_1      |           1 |         0 | 2025-08-17 06:05:52.740 |            3 | NULL        | NULL          |
| t_2      |           2 |         0 | 2025-08-17 06:05:52.979 |            6 | NULL        | NULL          |
| t_3      |           3 |         0 | 2025-08-17 06:05:53.240 |            9 | NULL        | NULL          |
| t_4      |           4 |         0 | 2025-08-17 06:05:53.561 |           12 | NULL        | NULL          |
+----------+-------------+-----------+-------------------------+--------------+-------------+---------------+
```

支持多种不同的语法形式，以兼容 Spark/Trino 等系统的语法。

```sql
-- BRANCH
SELECT * FROM paimon_tbl@branch(branch1);
SELECT * FROM paimon_tbl@branch("name" = "branch1");

-- TAG
SELECT * FROM paimon_tbl@tag(tag1);
SELECT * FROM paimon_tbl@tag("name" = "tag1");
SELECT * FROM paimon_tbl FOR VERSION AS OF 'tag1';
```

对于 `FOR VERSION AS OF` 语法，Doris 会根据后面的参数，自动判断是时间戳还是 Tag 名称。

## 系统表

> 该功能自 3.1.0 版本支持

Doris 支持查询 Paimon 系统表，用来查询表的相关元信息。支持使用系统表查看快照历史、清单文件、数据文件、分区等信息。

要访问 Paimon 表的元数据，可以在表名后添加 $ 符号，后跟系统表名称：

```sql
SELECT * FROM my_table$system_table_name;
```

`audit_log`、`binlog`、`manifests`、`partitions`、`ro`、`row_tracking` 和 `table_indexes` 系统表支持表引用
`@options`。选择的快照或 Tag 会应用于系统表数据；如果系统表会显示源表列，也会使用匹配的历史源表 Schema：

```sql
SELECT rowkind, id, old_name
FROM paimon_tbl$audit_log@options('scan.tag-name' = 'tag1');
```

其他系统表不支持 `@options`，因为它们无法保证所有生成结果行的阶段都使用选定的快照。Paimon 系统表也不支持
`scan.file-creation-time-millis`；静默丢弃这个文件过滤条件可能返回请求范围以外的数据。

> 注意点：Doris 不支持读取 Paimon 全局系统表，其只在 Flink 中支持。

### schemas

显示表的当前和历史模式信息。当使用 `ALTER TABLE`、`CREATE TABLE AS` 或 `CREATE DATABASE AS` 语句修改表模式时，每次修改都会在 schemas 表中生成一条记录：

```sql
SELECT * FROM my_table$schemas;
```

结果：
```text
+-----------+--------------------------------------------------------------------------------------------------------------------+----------------+--------------+---------+---------+-------------------------+
| schema_id | fields                                                                                                             | partition_keys | primary_keys | options | comment | update_time             |
+-----------+--------------------------------------------------------------------------------------------------------------------+----------------+--------------+---------+---------+-------------------------+
|         0 | [{"id":0,"name":"k","type":"INT NOT NULL"},{"id":1,"name":"f0","type":"INT"},{"id":2,"name":"f1","type":"STRING"}] | []             | ["k"]        | {}      |         | 2025-03-04 22:48:41.666 |
+-----------+--------------------------------------------------------------------------------------------------------------------+----------------+--------------+---------+---------+-------------------------+
```

### snapshots

显示表的所有有效快照信息，包括快照创建时间、提交用户、操作类型等：

```sql
SELECT * FROM my_table$snapshots;
```

结果：
```text
+-------------+-----------+--------------------------------------+---------------------+-------------+-------------------------+------------------------------------------------------+------------------------------------------------------+-------------------------+--------------------+--------------------+------------------------+----------------------+
| snapshot_id | schema_id | commit_user                          | commit_identifier   | commit_kind | commit_time             | base_manifest_list                                   | delta_manifest_list                                  | changelog_manifest_list | total_record_count | delta_record_count | changelog_record_count | watermark            |
+-------------+-----------+--------------------------------------+---------------------+-------------+-------------------------+------------------------------------------------------+------------------------------------------------------+-------------------------+--------------------+--------------------+------------------------+----------------------+
|           1 |         0 | d7ea4996-92c7-469f-b9ff-c76525954f1c | 9223372036854775807 | APPEND      | 2025-03-04 22:48:45.575 | manifest-list-dc5490ba-420c-445a-b6f7-6962d394935c-0 | manifest-list-dc5490ba-420c-445a-b6f7-6962d394935c-1 | NULL                    |                  1 |                  1 |                      0 | -9223372036854775808 |
|           2 |         0 | 34de47f6-31d1-4f06-b378-c85ef4fbca41 | 9223372036854775807 | APPEND      | 2025-07-01 23:11:35.406 | manifest-list-dca6aa5b-6fc6-4b4f-ac22-acfa15bbf171-0 | manifest-list-dca6aa5b-6fc6-4b4f-ac22-acfa15bbf171-1 | NULL                    |                  2 |                  1 |                      0 | -9223372036854775808 |
|           3 |         0 | 89f67183-a1f8-4ee9-b73c-3f7e992b79a7 | 9223372036854775807 | APPEND      | 2025-07-01 23:11:45.114 | manifest-list-6d624d1b-c774-4d95-905e-8258a7b89ecb-0 | manifest-list-6d624d1b-c774-4d95-905e-8258a7b89ecb-1 | NULL                    |                  3 |                  1 |                      0 | -9223372036854775808 |
|           4 |         0 | 31924a7c-1389-490c-adf1-3bb805b33cd7 | 9223372036854775807 | APPEND      | 2025-07-01 23:12:42.042 | manifest-list-09097a51-afde-485e-929b-d2cc39eb6eb2-0 | manifest-list-09097a51-afde-485e-929b-d2cc39eb6eb2-1 | NULL                    |                  5 |                  2 |                      0 | -9223372036854775808 |
|           5 |         0 | 1e90a80b-41cb-4242-b97c-889728f76810 | 9223372036854775807 | APPEND      | 2025-07-01 23:14:26.445 | manifest-list-b8471969-9c4d-41cd-b790-64f6efb2d142-0 | manifest-list-b8471969-9c4d-41cd-b790-64f6efb2d142-1 | NULL                    |                  6 |                  1 |                      0 | -9223372036854775808 |
|           6 |         0 | 1e90a80b-41cb-4242-b97c-889728f76810 | 9223372036854775807 | COMPACT     | 2025-07-01 23:14:29.317 | manifest-list-b8471969-9c4d-41cd-b790-64f6efb2d142-2 | manifest-list-b8471969-9c4d-41cd-b790-64f6efb2d142-3 | NULL                    |                  5 |                 -1 |                      0 | -9223372036854775808 |
+-------------+-----------+--------------------------------------+---------------------+-------------+-------------------------+------------------------------------------------------+------------------------------------------------------+-------------------------+--------------------+--------------------+------------------------+----------------------+
```

### options

显示表的当前配置选项。如果表选项未包含在表中，则该选项设置为默认值：

```sql
SELECT * FROM my_table$options;
```

结果：
```text
+------------------------+--------------------+
|         key            |        value       |
+------------------------+--------------------+
| snapshot.time-retained |         5 h        |
+------------------------+--------------------+
```

### files

显示当前快照指向的所有数据文件信息，包括文件格式、记录数、文件大小等：

```sql
SELECT * FROM my_table$files;
```

结果：
```text
mysql> SELECT * FROM my_table$files;
+-----------+--------+------------------------------------------------------------------------------------------------------------------------+-------------+-----------+-------+--------------+--------------------+---------+---------+-------------------+---------------------+---------------------+---------------------+---------------------+-------------------------+-------------+
| partition | bucket | file_path                                                                                                              | file_format | schema_id | level | record_count | file_size_in_bytes | min_key | max_key | null_value_counts | min_value_stats     | max_value_stats     | min_sequence_number | max_sequence_number | creation_time           | file_source |
+-----------+--------+------------------------------------------------------------------------------------------------------------------------+-------------+-----------+-------+--------------+--------------------+---------+---------+-------------------+---------------------+---------------------+---------------------+---------------------+-------------------------+-------------+
| {}        |      0 | s3://paimon-warehouse-dev/test-flink/cookbook.db/my_table/bucket-0/data-b4a49c57-6ef6-4c04-8813-07a4960d987c-0.parquet | parquet     |         0 |     5 |            5 |               1321 | [1]     | [6]     | {f0=0, f1=0, k=0} | {f0=4, f1=111, k=1} | {f0=11, f1=k7, k=6} |                   0 |                   5 | 2025-07-01 23:14:23.967 | COMPACT     |
+-----------+--------+------------------------------------------------------------------------------------------------------------------------+-------------+-----------+-------+--------------+--------------------+---------+---------+-------------------+---------------------+---------------------+---------------------+---------------------+-------------------------+-------------+
```

### tags

显示表的所有标签信息，包括标签名称和关联的快照：

```sql
SELECT * FROM my_table$tags;
```

结果：
```text
+----------+-------------+-----------+-------------------------+--------------+--------------+
| tag_name | snapshot_id | schema_id |             commit_time | record_count |   branches   |
+----------+-------------+-----------+-------------------------+--------------+--------------+
|     tag1 |           1 |         0 | 2025-03-04 14:55:29.344 |            3 |      []      |
|     tag3 |           3 |         0 | 2025-03-04 14:58:24.691 |            7 |  [branch-1]  |
+----------+-------------+-----------+-------------------------+--------------+--------------+
```

### branches

显示表的所有已知分支信息：

```sql
SELECT * FROM my_table$branches;
```

结果：
```text
+----------------------+-------------------------+
|          branch_name |             create_time |
+----------------------+-------------------------+
|              branch1 | 2025-03-04 20:31:39.084 |
|              branch2 | 2025-03-04 21:11:14.373 |
+----------------------+-------------------------+
```

### consumers

显示表的消费者信息，用于跟踪数据消费情况：

```sql
SELECT * FROM my_table$consumers;
```

结果：
```text
+-------------+------------------+
| consumer_id | next_snapshot_id |
+-------------+------------------+
|         id1 |                1 |
|         id2 |                3 |
+-------------+------------------+
```

### manifests

显示表当前快照的清单文件信息：

```sql
SELECT * FROM my_table$manifests;
```

结果：
```text
+-------------------------------------------------+-----------+-----------------+-------------------+-----------+---------------------+---------------------+
| file_name                                       | file_size | num_added_files | num_deleted_files | schema_id | min_partition_stats | max_partition_stats |
+-------------------------------------------------+-----------+-----------------+-------------------+-----------+---------------------+---------------------+
| manifest-3df9bb64-5c11-4aef-994e-d8717fedfc70-0 |      1949 |               1 |                 0 |         0 | {}                  | {}                  |
| manifest-d7eb4ec4-7238-478a-9ae6-91a4ccebd561-0 |      1946 |               1 |                 0 |         0 | {}                  | {}                  |
| manifest-3b6f4079-c893-4413-aedc-1e8fbcea6db1-0 |      1948 |               1 |                 0 |         0 | {}                  | {}                  |
| manifest-abe5177f-82da-4e86-9864-40efffb391bd-0 |      1964 |               1 |                 0 |         0 | {}                  | {}                  |
| manifest-ee89dff3-a523-4655-a4b8-d7c9e471a1d6-0 |      1949 |               1 |                 0 |         0 | {}                  | {}                  |
| manifest-ee89dff3-a523-4655-a4b8-d7c9e471a1d6-1 |      2232 |               1 |                 5 |         0 | {}                  | {}                  |
+-------------------------------------------------+-----------+-----------------+-------------------+-----------+---------------------+---------------------+
```

### aggregation_fields

显示表的聚合字段信息，用于聚合表的字段配置：

```sql
SELECT * FROM my_table$aggregation_fields;
```

结果：
```text
+------------+--------------+----------+------------------+---------+
| field_name | field_type   | function | function_options | comment |
+------------+--------------+----------+------------------+---------+
| k          | INT NOT NULL | []       | []               | NULL    |
| f0         | INT          | []       | []               | NULL    |
| f1         | STRING       | []       | []               | NULL    |
+------------+--------------+----------+------------------+---------+
```

### partitions

显示表的分区信息，包括每个分区的总记录数和文件总大小：

```sql
SELECT * FROM my_table$partitions;
```

结果：
```text
+-----------+--------------+--------------------+------------+-------------------------+
| partition | record_count | file_size_in_bytes | file_count | last_update_time        |
+-----------+--------------+--------------------+------------+-------------------------+
| {}        |            5 |               1321 |          1 | 2025-07-01 23:14:23.967 |
+-----------+--------------+--------------------+------------+-------------------------+
```

### buckets

显示表的分桶信息，包括每个分桶的统计数据：

```sql
SELECT * FROM my_table$buckets;
```

结果：
```text
+-----------+--------+--------------+--------------------+------------+-------------------------+
| partition | bucket | record_count | file_size_in_bytes | file_count | last_update_time        |
+-----------+--------+--------------+--------------------+------------+-------------------------+
| {}        |      0 |            5 |               1321 |          1 | 2025-07-01 23:14:23.967 |
+-----------+--------+--------------+--------------------+------------+-------------------------+
```

### statistics

显示表的统计信息，包括行数、数据大小等统计数据：

```sql
SELECT * FROM my_table$statistics;
```

结果：
```text
+--------------+------------+-----------------------+------------------+----------+
|  snapshot_id |  schema_id |     mergedRecordCount | mergedRecordSize |  colstat |
+--------------+------------+-----------------------+------------------+----------+
|            2 |          0 |              2        |         2        |    {}    |
+--------------+------------+-----------------------+------------------+----------+
```

### table_indexes

显示表的索引信息：

```sql
SELECT * FROM my_table$table_indexes;
```

结果：

```text
+--------------------------------+-------------+--------------------------------+--------------------------------+----------------------+----------------------+--------------------------------+
|                      partition |      bucket |                     index_type |                      file_name |            file_size |            row_count |                      dv_ranges |
+--------------------------------+-------------+--------------------------------+--------------------------------+----------------------+----------------------+--------------------------------+
|                   {2025-03-01} |           0 |                           HASH | index-70abfebf-149e-4796-9f... |                   12 |                    3 |                         <NULL> |
|                   {2025-04-01} |           0 |               DELETION_VECTORS | index-633857e7-cdce-47d2-87... |                   33 |                    1 | [(data-346cb9c8-4032-4d66-a... |
+--------------------------------+-------------+--------------------------------+--------------------------------+----------------------+----------------------+--------------------------------+
```

### 系统表使用场景

通过系统表，您可以轻松完成以下运维和监控任务。

#### 查看表的最新快照信息，了解表的当前状态

```sql
SELECT snapshot_id, commit_time, commit_kind, total_record_count FROM catalog_sales$snapshots ORDER BY snapshot_id DESC;
```

结果：

```text
+-------------+-------------------------+-------------+--------------------+
| snapshot_id | commit_time             | commit_kind | total_record_count |
+-------------+-------------------------+-------------+--------------------+
|           1 | 2025-07-01 21:21:54.179 | APPEND      |           14329288 |
+-------------+-------------------------+-------------+--------------------+
```

#### 查看快照的表信息

```sql
SELECT s.snapshot_id, t.schema_id, t.fields FROM store_sales$snapshots s JOIN store_sales$schemas t ON s.schema_id=t.schema_id;
```

结果：

```text
+-------------+-----------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| snapshot_id | schema_id | fields                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
+-------------+-----------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
|           1 |         0 | [{"id":0,"name":"ss_sold_date_sk","type":"INT"},{"id":1,"name":"ss_item_sk","type":"INT NOT NULL"},{"id":2,"name":"ss_ticket_number","type":"INT NOT NULL"},{"id":3,"name":"ss_sold_time_sk","type":"INT"},{"id":4,"name":"ss_customer_sk","type":"INT"},{"id":5,"name":"ss_cdemo_sk","type":"INT"},{"id":6,"name":"ss_hdemo_sk","type":"INT"},{"id":7,"name":"ss_addr_sk","type":"INT"},{"id":8,"name":"ss_store_sk","type":"INT"},{"id":9,"name":"ss_promo_sk","type":"INT"},{"id":10,"name":"ss_quantity","type":"INT"},{"id":11,"name":"ss_wholesale_cost","type":"DECIMAL(7, 2)"},{"id":12,"name":"ss_list_price","type":"DECIMAL(7, 2)"},{"id":13,"name":"ss_sales_price","type":"DECIMAL(7, 2)"},{"id":14,"name":"ss_ext_discount_amt","type":"DECIMAL(7, 2)"},{"id":15,"name":"ss_ext_sales_price","type":"DECIMAL(7, 2)"},{"id":16,"name":"ss_ext_wholesale_cost","type":"DECIMAL(7, 2)"},{"id":17,"name":"ss_ext_list_price","type":"DECIMAL(7, 2)"},{"id":18,"name":"ss_ext_tax","type":"DECIMAL(7, 2)"},{"id":19,"name":"ss_coupon_amt","type":"DECIMAL(7, 2)"},{"id":20,"name":"ss_net_paid","type":"DECIMAL(7, 2)"},{"id":21,"name":"ss_net_paid_inc_tax","type":"DECIMAL(7, 2)"},{"id":22,"name":"ss_net_profit","type":"DECIMAL(7, 2)"}] |
|           2 |         0 | [{"id":0,"name":"ss_sold_date_sk","type":"INT"},{"id":1,"name":"ss_item_sk","type":"INT NOT NULL"},{"id":2,"name":"ss_ticket_number","type":"INT NOT NULL"},{"id":3,"name":"ss_sold_time_sk","type":"INT"},{"id":4,"name":"ss_customer_sk","type":"INT"},{"id":5,"name":"ss_cdemo_sk","type":"INT"},{"id":6,"name":"ss_hdemo_sk","type":"INT"},{"id":7,"name":"ss_addr_sk","type":"INT"},{"id":8,"name":"ss_store_sk","type":"INT"},{"id":9,"name":"ss_promo_sk","type":"INT"},{"id":10,"name":"ss_quantity","type":"INT"},{"id":11,"name":"ss_wholesale_cost","type":"DECIMAL(7, 2)"},{"id":12,"name":"ss_list_price","type":"DECIMAL(7, 2)"},{"id":13,"name":"ss_sales_price","type":"DECIMAL(7, 2)"},{"id":14,"name":"ss_ext_discount_amt","type":"DECIMAL(7, 2)"},{"id":15,"name":"ss_ext_sales_price","type":"DECIMAL(7, 2)"},{"id":16,"name":"ss_ext_wholesale_cost","type":"DECIMAL(7, 2)"},{"id":17,"name":"ss_ext_list_price","type":"DECIMAL(7, 2)"},{"id":18,"name":"ss_ext_tax","type":"DECIMAL(7, 2)"},{"id":19,"name":"ss_coupon_amt","type":"DECIMAL(7, 2)"},{"id":20,"name":"ss_net_paid","type":"DECIMAL(7, 2)"},{"id":21,"name":"ss_net_paid_inc_tax","type":"DECIMAL(7, 2)"},{"id":22,"name":"ss_net_profit","type":"DECIMAL(7, 2)"}] |
+-------------+-----------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
```

#### 查看 buckets 的数据分布情况

```sql
SELECT `bucket` , COUNT(*) as file_count, SUM(file_size_in_bytes)/1024/1024 as total_size_mb from paimon_s3.tpcds.catalog_sales$files GROUP BY `bucket`  ORDER BY total_size_mb;
```

> 注意：Paimon 系统表中的许多字段是 Doris 中的关键字，因此需要加上反引号 `` ` ``。

结果：

```text
+--------+------------+--------------------+
| bucket | file_count | total_size_mb      |
+--------+------------+--------------------+
|     35 |          1 | 12.144722938537598 |
|     81 |          1 | 12.143454551696777 |
|     37 |          1 |  12.14071273803711 |
|     36 |          1 | 12.139023780822754 |
|     63 |          1 | 12.137332916259766 |
|      7 |          1 | 12.122495651245117 |
|     15 |          1 | 12.117934226989746 |
|     11 |          1 | 12.116133689880371 |
|     12 |          1 |  12.11155891418457 |
|     46 |          1 | 12.111005783081055 |
+--------+------------+--------------------+
```

## 附录

### FAQ

1. `Could not find a file io implementation for scheme 's3a' in the classpath`

    3.1 之前的版本，使用 HMS 作为元数据存储，存储端使用 's3a' 或 's3' 协议的时候，出现如下报错：

    ```
    java.io.UncheckedIOException: org.apache.paimon.fs.UnsupportedSchemeException: Could not find a file io implementation for scheme 's3a' in the classpath. Hadoop FileSystem also cannot access this path 's3a://`.
    ```

    3.1 之前的版本不支持 `s3a` 协议，如果必须使用，可以临时显示添加 `s3a` 协议相关参数临时解决。

    3.1 之后的版本无需此操作。同时，3.1 之后的版本如果需要对 Paimon 存储参数进行覆盖，也可以显示的添加 paimon.fs. 前缀的参数。Paimon 底层使用 HDFS 的 API，因此所有 fs.s3a 的参数都可以使用。

    如：

    ```sql
    CREATE CATALOG `paimon_hms_on_s3a` PROPERTIES (
        "type" = "paimon",
        "paimon.catalog.type" = "hms",
        "hive.metastore.uris" = "thrift://172.20.48.119:9383",
        "warehouse" = "s3a://bucket/paimon_warehouse",
        "s3.access_key" = "<ak>",
        "s3.secret_key" = "<sk>",
        "s3.region" = "ap-east-1",
        "s3.endpoint" = "https://s3.ap-east-1.amazonaws.com",
        -- explicitly add s3a parameters
        "fs.s3a.access.key" = "<ak>",
        "fs.s3a.secret.key" = "<sk>",
        "fs.s3a.endpoint.region" = "ap-east-1",
        "fs.s3a.endpoint" = "https://s3.ap-east-1.amazonaws.com",
        "fs.s3a.impl" = "org.apache.hadoop.fs.s3a.S3AFileSystem"
    );
    ```

    使用 `s3` 协议的时候，需要显示添加 Paimon S3 相关参数，即添加 `paimon.` 前缀。如

    ```sql
    CREATE CATALOG test_paimon_on_hms_aws_catalog PROPERTIES (
        'type' = 'paimon',
        'paimon.catalog.type' = 'hms',
        'warehouse' = 's3://bucket-hk/paimon_warehouse',
        'hive.metastore.uris' = 'thrift://127.0.0.1:9383',
        's3.region' = 'ap-east-1',
        's3.endpoint' = 'https://s3.ap-east-1.amazonaws.com',
        's3.access_key' = '<ak>',
        's3.secret_key' = '<sk>',
        -- explicitly add s3 parameters
        'paimon.s3.region' = 'ap-east-1',
        'paimon.s3.endpoint' = 'ap-east-1',
        'paimon.s3.access-key' = '<ak>',
        'paimon.s3.secret-key' = '<sk>'
    );
    ```
